--- a/src/App.css
+++ b/src/App.css
@@ -38,13 +38,13 @@
 /* Twitter */
 .fa-x-twitter {
   background: #55acee;
-  color: white;
+  color: blue;
 }
 
 /* Linkedin */
 .fa-linkedin {
   background: #55acee;
-  color: white;
+  color: blue;
 }
 
 /* Reddit */
