CI/CD commit for test

--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,11 @@
 /* Linkedin */
 .fa-linkedin {
   background: #55acee;
-  color: white;
+  color: pink;
 }
 
 /* Reddit */
 .fa-reddit {
   background: #55acee;
-  color: white;
+  color: pink;
 }
