CI/CD commit for test 2

--- a/src/App.css
+++ b/src/App.css
@@ -38,17 +38,13 @@
 /* Twitter */
 .fa-x-twitter {
   background: #55acee;
-  color: blue;
+  color: pink;
 }
 
 /* Linkedin */
 .fa-linkedin {
   background: #55acee;
-<<<<<<< HEAD
   color: pink;
-=======
-  color: blue;
->>>>>>> eea2458d84530f0b947593d0f955df239c96201b
 }
 
 /* Reddit */
